message Player
{
	optional int32 id = 1;
	optional string name = 2;
	optional string head = 3;
}

message StartMatch
{
	required int32 want = 1;
}

message StartSync
{
	repeated Player members = 1;
	required int32 mapid = 2;
	required int32 seed = 3;
}

message SyncMember
{
	repeated int32 playerid = 1;
	repeated int32 progress = 2;
}

message Result
{
	required int32 resid = 1;
	required string resmsg = 2;
}

message BattleMan
{
	required Player player = 1;
	required int32 camp = 2;
}

message BattleStart
{
	repeated BattleMan members = 1;
	required int32 turninterval = 2;
	required int32 mapid = 3;
}

message UpdateTurn
{
	required int32 turn = 1;
}

message PlanetCommand
{
	required int32 fromid = 1;
	required int32 toid = 2;
}

message OneTurn
{
	required int32 index = 1;
	repeated PlanetCommand pcmds = 2;
}

message MultiTurn
{
	repeated OneTurn turns = 1;
}






